Tue Feb  3 19:45:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Acceptor.h:
        * ace/Active_Map_Manager_T.h:
        * ace/CDR_Stream.h:
        * ace/Configuration.h:
        * ace/Connector.h:
        * ace/Dev_Poll_Reactor.h:
        * ace/Dirent.h:
        * ace/Map_T.h:
        * ace/Message_Block.h:
        * ace/Message_Queue_Vx.h:
        * ace/Name_Request_Reply.h:
        * ace/Reactor.h:
        * ace/Reactor_Impl.h:
        * ace/Select_Reactor_Base.h:
        * ace/Select_Reactor_T.h:
        * ace/Strategies_T.h:
        * ace/WFMO_Reactor.h:
          Doxygen changes

        * ace/Unbounded_Queue.h:
        * ace/Unbounded_Queue.inl:
          Use bool

Tue Feb  3 15:57:41 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tests/Logging_Strategy_Test.cpp:

          Use unsigned char instead of char to index arrays, to silence
          warnings from GCC 4.3.

Mon Feb  2 19:07:39 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/config/global.features:

          Added tao_idl_fe_gen feature to be automatically disabled.

Mon Feb  2 07:40:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/lib/Client_Logging_Handler.cpp:
        * netsvcs/lib/Server_Logging_Handler_T.cpp:
          Check return values of stream operators

        * netsvcs/lib/Client_Logging_Handler.h:
          Doxygen changes

Fri Jan 30 20:42:45 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/DLL_Manager.cpp (ACE_DLL_Handle::open): Correct ACE_TEXT usage
          in AIX case.

        * ace/config-aix-5.x.h: Wrap ACE_DLL_SUFFIX and ACE_LD_SEARCH_PATH
          with ACE_TEXT().

Fri Jan 30 15:02:08 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * ace/Barrier.cpp:
        * ace/Dynamic_Service_Base.cpp:
        * ace/Hash_Map_Manager_T.cpp:
        * ace/Malloc.cpp:
        * ace/Malloc_T.cpp:
        * ace/Mutex.cpp:
        * ace/Pipe.cpp:
        * ace/Semaphore.cpp: